# legendary-ml

./: .env.example  .gitignore  README.md  overview.md  pyproject.toml  training_llm.txt
data/: horse_sales_feedback.csv  lamini_docs.jsonl  modeling.json
parts/Association_Rule_Learning/: apriori.ipynb  association_rule_learning.md
parts/Classification/: classification.md  k_nearest_neighbors.ipynb  logistic_regression.ipynb  naive_bayes.md
parts/Regression/: assumptions_of_linear_regression.ipynb  linear_regression.ipynb  model_selection.ipynb  multiple_linear_regression.ipynb  polynomial_regression.ipynb  random_forest.ipynb  regression.md  regression_decision_tree.ipynb  svm.md  svm_regression.ipynb
parts/data_preprocessing/: building_model.md  detailed_machine_learning_process.md  encoding.ipynb  feature_scaling.md  scaling.ipynb  scaling.py  spliting.ipynb  the_machine_learning_process.md
parts/etl/aszyncio/: req_aszinco.py  tasks_aszinco.py
parts/etl/rest_apis/: httpx_example.py
parts/evaluation/: confusion_matrix_accuracy.md  r_squre.md
parts/guis/: with_gradio.py  with_streamlit.py
parts/large_language_model/: basic_preparation.py  embedding.ipynb  finetune_llm.ipynb  llm.md  prompting_examples.py  run_locally_ollama.py
parts/large_language_model/deeplearning/: finetuning_reason.py  instruction_tuning.py
parts/modeling/: data_classes_c.py  pydantic_stuff.py
parts/statistics/: backward_elimination.ipynb  galton_board.py  p_value.md  p_value_for_dummies.md  simple_statistics.ipynb  simple_statistics.py  t_test.ipynb  t_test.md  variance_bias.md
