[tool.poetry]
name = "legendary-ml"
version = "0.1.0"
description = "Trying some ML technics"
authors = ["Mohamad Denno <dennokhmhd@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "legendary_ml"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
