[tool.poetry]
name = "legendary-ml"
version = "0.1.0"
description = "Trying some ML technics"
authors = ["Mohamad Denno <dennokhmhd@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "legendary_ml"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
apyori = "^1.1.2"
transformers = "^4.36.0"
torch = "^2.1.1"
accelerate = "^0.25.0"
pydantic = "^2.5.2"
langchain = "^0.0.350"
openai = "^1.5.0"
tiktoken = "^0.5.2"
icecream = "^2.1.3"
httpx = "^0.26.0"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
gradio = "^4.12.0"
streamlit = "^1.29.0"
asyncio = "^3.4.3"
jsonlines = "^4.0.0"
datasets = "^2.16.1"
lamini = "^2.0.4"
llama2 = "0.0.1.dev0"
litellm = "^1.16.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
